syntax = "proto3";

package com.apixio.datacatalog;

message ExternalId {
  string id = 1;
  string assignAuthority = 2;
}